wp-content/themes/assist-trust/style.css
/* ... */
blockquote p:before {
  content: open-quote;
  padding-right: 5px;
}

blockquote p:after {
  content: close-quote;
  padding-left: 2px;
}

blockquote footer {
  margin-top: 1em;
}

@media (min-width: 768px) { /* medium devices */
  blockquote p {
    font-size: 1.25rem;
  }
}

/* tables */

th, td {
  padding: .25rem;
  border: 1px solid #004279;
}

thead th {
  color: #fff;
  background-color: #d70c8c;
}

thead tr + tr th,
tbody th {
  color: #d70c8c;
  background-color: #e2e6f0;
}

/* helpers */

.visually-hidden {
  position: absolute !important;
  clip: rect(1px, 1px, 1px, 1px) !important;
  padding: 0 !important;
  border: 0 !important;
  height: 1px !important;
  width: 1px !important;
  overflow: hidden !important;
}

.full-width {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.table-overflow {
  overflow-x: auto;
  margin-left: -1rem; /* gutter */
  margin-right: -1rem; /* gutter */
}

@media (min-width: 576px) { /* small devices */
  .table-overflow {
    margin-left: auto;
    margin-right: auto;
  }
}

/* button */

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: .75rem 1rem;
  min-height: 44px;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  transition: background-color .2s;
}

.button:hover {
  text-decoration: none;
}

/* some duplication with *:focus due to specificity conflict with .button */
.button:focus {
  outline: 1px dashed currentColor;
  outline-offset: 5px;
}

.button__primary {
  color: #fff;
  background-color: #d70c8c;
}

.button__primary:hover,
.button__primary:focus {
  background-color: #f323a6;
  outline-color: #d70c8c;
}

.button__secondary {
  color: #004279 !important;
  background-color: #fff;
}

.button__secondary:hover {
  text-decoration: underline;
}

.button_small {
  min-height: auto;
  padding: .5rem 1rem;
  font-size: .75rem;
}

.button__donate {
  height: 100%;
  min-height: 0;
  padding: 0 .75rem;
}

/* layout */

.sidebar {
  background: #fff;
}

.content > * + * {
  margin-top: 40px;
}

.content a {
  color: #d70c8c;
}

.header {
  min-height: 44px;
  color: #fff;
  background-color: #004279;
}

.header *:focus {
  outline-offset: 0;
  outline-color: #fff;
}

.header .button { /* Todo: flatten selector */
  margin-right: -0.25rem; /* remaining gutter after deducting .row from .container */
}

.header--contact-info {
  display: flex;
  align-items: center;
  text-align: right;
  font-size: 0.75rem;
  font-weight: bold;
}

.logo {
  height: 44px;
  max-width: 220px;
  padding-top: .5rem;
  padding-bottom: .5rem;

  /* IE fix */
  max-height: 96px; /* intrinsic image height */
}

.slogan-social-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/**
 * mimic flexbox space-evenly layout for IE
 * https://stackoverflow.com/questions/47534216/how-to-make-css-justify-contentspace-evenly-fallback-to-space-between-on-safari
 */
.slogan-social-container:before,
.slogan-social-container:after {
  content: '';
  display: block;
}

.slogan {
  display: flex;
  flex-direction: column;
  color: #c1c9df;
  font-weight: bold;
  font-size: 0.75rem;
  line-height: 1;
  letter-spacing: 1px;
  width: max-content;
}

.link--email {
  color: inherit;
}

@media (min-width: 576px) { /* small devices */
  .header {
    padding-bottom: 20px;
  }

  .header *:focus {
    outline-offset: 5px;
  }

  .header .button { /* Todo: flatten selector */
    margin-right: 0;
  }

  .logo {
    height: auto;
  }

  .slogan {
    font-size: 1.4rem;
    line-height: 1.2;
  }
}

/* slider */

.slider--wrapper {
  position: relative;
}

.slider {
  overflow: hidden;
  color: #fff;
}

.slider ul {
  display: flex;
  margin: 0 auto;
  padding: 0;
  background-color: rgba(0, 0, 0, .5);
}

.slider li {
  flex: 0 0 100%;
  list-style: none;
}

.slider figure {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.slider figcaption {
  position: absolute;
  height: 2rem;
}

.slider img {
  display: block;
  height: 200px;
  width: 100%;
  object-fit: cover;
}

.slider--controls li {
  list-style: none;
}

#previous,
#next {
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
  height: 2rem;
  width: 2rem;
  color: #fff;
  transition: all .2s ease-in-out;
}

#previous {
  left: 1rem;
}

#previous:hover {
  transform: scale(1.3);
}

#next {
  right: 1rem;
  transform: rotate(180deg);
}

#next:hover {
  transform: rotate(180deg) scale(1.3);
}

.slider--nav {
  position: absolute;
  bottom: 1rem;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}

.slider--nav > * + * {
  margin-left: .5rem;
}

.slider--nav button { 
  height: 1rem;
  width: 1rem;
  border-radius: 50%;
  background-color: #fff;
  outline-color: #fff;
  transition: all .2s ease-in-out;
}

.slider--nav li:not(.active):hover button {
  transform: scale(1.3);
}

.slider--nav li.active button {
  background-color: #d70c8c;
}

@media (min-width: 768px) { /* medium devices */
  .slider img {
    height: 400px;
  }

  #previous,
  #next {
    height: 4rem;
    width: 4rem;
  }
}

/* footer */

.page-footer {
  margin-top: auto;
  color: #fff;
  background-color: #004279;
}

.page-footer *:focus {
  outline-color: #fff;
}

.page-footer a {
  color: currentColor;
}

@media (min-width: 576px) { /* small devices */
  .page-footer--right {
    display: flex;
    flex-direction: column;
    height: 100%;
    text-align: right;
  }
}

/* ---------------------------------------------------------------------- */

.menu-main-container, /* necessary for small viewport */
.mega-menu {
  background-color: rgba(0, 66, 121, 0.9); /* #004279 */
}

.mega-menu {
  overflow-x: auto;
  white-space: nowrap;
  width: 100%;
  text-align: left;
}

.mega-menu--content {
  max-width: 1140px;
  margin-left: auto;
  margin-right: auto;
}
/* ... */

